--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-asdfghj,jhgfds
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Actividades de IOT</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <div class="container2">
+                    <a href="./Actividad3/index.php" class="btn btn-primary">Activity 3</a>
+                </div>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <div class="container2">
+                    <a href="./Actividad5/index.html" class="btn btn-primary">Activity 5</a>
+                </div>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <div class="container2">
+                    <a href="./Actividad6/index.html" class="btn btn-primary">Activity 6</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
